[gd_scene load_steps=6 format=3 uid="uid://c585getwe5jkw"]

[ext_resource type="Script" path="res://Scripts/Ui/Battle/RewardItemControl.gd" id="1_6ju6x"]
[ext_resource type="Texture2D" uid="uid://bpx1g514wd5wo" path="res://Content/Atlases/ui_atlas_2.png" id="2_fsfp0"]
[ext_resource type="Texture2D" uid="uid://ykuw36u3wwnl" path="res://Content/UiSprites/ItemsSprites/icon_equip_ring_gold.png" id="3_ls0f2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_h1uop"]
atlas = ExtResource("2_fsfp0")
region = Rect2(796, 572, 179, 189)

[sub_resource type="LabelSettings" id="LabelSettings_qyhab"]
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="RewardItemControl" type="Control"]
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_6ju6x")

[node name="BorderTextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(44, 44)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_h1uop")
expand_mode = 1

[node name="ItemTextureRect" type="TextureRect" parent="BorderTextureRect"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_ls0f2")
expand_mode = 1

[node name="ItemCountTextLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 20.0
offset_right = 20.0
offset_bottom = 43.0
grow_horizontal = 2
text = "222"
label_settings = SubResource("LabelSettings_qyhab")
horizontal_alignment = 1
vertical_alignment = 2
justification_flags = 0
